--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,31 @@
+# EditorConfig, see:
+https://editorconfig.org
+
+# Make this the top-most EditorConfig file
 root = true
 
+# Unix-style newlines with
+# a newline ending every file and
+# trim trailing whitrspace
 [*]
-charset = utf-8
-indent_style = tab
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+# Set default charset
+[*.{js,py}]
+charset = utf-8
+
+# 4 space indentation for Python files
+[*.py]
+indent_style = space
+indent_size = 4
+
+# Tab indentation (no size specified) for Makefiles
+[Makefile]
+indent_style = tab
+
+# 2 space indentation over for shell scripts
+[*.{sh,csh}]
+indent_style = space
+indent_size = 2
