--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,12 @@ Thumbs.db
 
 # Files that might appear on external disks
 .Spotlight-V100
-.Trashes
+System Volume Information/
+.nfs*
+
+# Trash and recycle bins
+.Trash*/
+$RECYCLE.BIN/
+.local/share/Trash/
+lost+found/
+
