--- a/.hgignore
+++ b/.hgignore
@@ -1,6 +1,3 @@
-# Use shell-style glob syntax
-syntax: glob
-
 # Compiled Python files
 *.pyc
 
@@ -14,4 +11,11 @@ Thumbs.db
 
 # Files that might appear on external disks
 .Spotlight-V100
-.Trashes
+System Volume Information/
+.nfs*
+
+# Trash and recycle bins
+.Trash*/
+$RECYCLE.BIN/
+.local/share/Trash/
+lost+found/
